# notme-corpus

./: .gitignore  Dockerfile  Makefile  conftest.py  main_api.py  pyproject.toml  readme.md
models/: __init__.py  node_text.py
routers/: __init__.py  base.html  buckets.py  claude.py  corpus.py  genai.py  images.py  tools.py  workq.py
routers/buckets/: list.html  list_table.html
routers/buckets/objects/: list.html  list_table.html  list_table_row.html
routers/claude/: query.html  query_fragment.html
routers/corpus/: files.html  files_table.html  list.html  list_table.html
routers/genai/: query.html  query_fragment.html
routers/rag/: query.html  query_fragment.html
routers/tools/: query.html  query_fragment.html
routers/workq/: list.html  list_table.html
scripts/: corpus-utils  gemini-utils  torch-utils
scripts/torch/fashion/: Dockerfile  build  model.py  train
services/anthropic/: __init__.py  files.py  query.py
services/anthropic/tools/: __init__.py  list.py  tool_places_explore.py  tool_places_search.py
services/corpus/: ingest_qdrant.py
services/corpus/fs/: files.py
services/database/: session.py
services/gemini/: __init__.py  lib.py
services/images/: download.py
services/qdrant/: __init__.py  client.py  utils.py
services/storage/gcs/: __init__.py  buckets.py
services/torch/: __init__.py  fashion.py  utils.py
supervisor/: dev.conf
test/models/: test_user.py
